// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the ConfirmTransactionModal component and bidDenom is weak should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  width: 500px;
  padding: 4px;
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: #201d2a;
  border-radius: 8px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 11;
}

.c0 main {
  padding: 32px;
}

.c0 footer {
  padding: 32px 36px 0;
  background-color: #1a1823;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 32px;
}

.c1 {
  width: 24px;
  height: 24px;
  position: absolute;
  top: 10px;
  right: 10px;
  background: transparent;
  border: none;
}

.c1 svg {
  fill: #656273;
}

.c1:hover svg {
  fill: #9895a6;
}

.c1:active svg {
  fill: #4d4b57;
}

.c14 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c14:hover {
  background-color: #fff;
}

.c14:active {
  background-color: #9895a6;
}

.c15 {
  background-color: #302E3D;
  color: #e1dfeb;
}

.c15:hover {
  background-color: #47445a;
}

.c15:active {
  background-color: #9895a6;
}

.c4 {
  margin-bottom: 10px;
  font-size: 12px;
  color: #656273;
}

.c3 {
  padding: 24px;
  margin: 32px 0 24px;
  background-color: #1a1823;
  border-radius: 8px;
  font-size: 28px;
  font-weight: 500;
  text-align: center;
}

.c3 sup {
  font-size: 14px;
}

.c2 {
  margin: 0 0 24px;
  font-size: 16px;
  font-weight: 500;
  text-align: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border: none;
  background: transparent;
  color: #9895a6;
  font-size: 14px;
}

.c12 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.1s ease;
  transition: 0.1s ease;
}

.c12:hover {
  color: #e1dfeb;
}

.c12:hover svg * {
  fill: #e1dfeb;
}

.c12:active {
  color: #938fa1;
}

.c12:active svg * {
  fill: #938fa1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 + .c5 {
  margin-top: 16px;
}

.c6 span {
  font-weight: 400;
  color: #656273;
}

.c6 strong {
  font-weight: 500;
}

.c8 {
  padding: 32px 32px;
  border-top: 1px solid #302E3D;
}

.c9 {
  margin: 0 0 12px;
  color: #656273;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
  margin: 12px 0 16px;
}

.c7 {
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #1a1823;
}

.c7 svg {
  width: 24px;
  height: 24px;
}

.c11 {
  padding: 12px 16px;
  background-color: transparent;
  border: 1px solid #302E3D;
  border-radius: 22px;
  font-size: 14px;
  font-weight: 500;
  color: #9895a6;
}

.c11:hover {
  background-color: #47445a;
}

.c11:active {
  background-color: #191820;
}

@media screen and (max-width:1440px) {
  .c0 {
    width: 400px;
  }
}

@media screen and (max-width:480px) {
  .c0 {
    width: 100%;
    border-radius: 0;
    top: unset;
    left: 0;
    bottom: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media screen and (max-width:1440px) {
  .c0 main {
    padding: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c0 footer {
    padding: 24px 24px 0;
  }
}

@media screen and (max-width:1440px) {
  .c13 {
    padding-bottom: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c14 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c14 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    padding: 24px;
    margin: 24px 0 20px;
    font-size: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c3 sup {
    font-size: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c2 {
    font-size: 14px;
  }
}

@media screen and (max-width:480px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (max-width:1440px) {
  .c12 {
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c12 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c12 svg {
    width: 16px;
    height: 16px;
  }
}

<div
    class="c0"
  >
    <button
      class="c1"
      data-testid="confirm-modal-close-icon"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          opacity="0.5"
        >
          <g
            transform="translate(-.453 .555)"
          >
            <path
              class="cls-3"
              d="M8.762.384a1.311 1.311 0 011.981 1.707l-.127.147-8.378 8.378A1.311 1.311 0 01.257 8.909l.127-.147z"
              transform="translate(6.453 6.445)"
            />
            <path
              class="cls-3"
              d="M.384.384A1.311 1.311 0 012.09.257l.147.127 8.379 8.38a1.31 1.31 0 01-1.706 1.98l-.147-.127L.384 2.236a1.31 1.31 0 010-1.852z"
              transform="translate(6.453 6.445)"
            />
          </g>
        </g>
      </svg>
    </button>
    <main>
      <h3
        class="c2"
      >
        Confirm Transaction
      </h3>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          You're receiving
        </div>
        ~ 0.000000 
        <sup>
          ETH
        </sup>
      </div>
      <div
        class="c5 c6"
      >
        <span>
          Current Exchange Rate
        </span>
        <strong>
          1 NOM = NaN ETH
        </strong>
      </div>
      <div
        class="c5 c6"
      >
        <span>
          You're sending
        </span>
        <strong>
          0.000000 NOM
        </strong>
      </div>
      <div
        class="c5 c6"
      >
        <div>
          <span>
            Wallet
          </span>
          <div>
            <strong />
          </div>
        </div>
        <div
          class="c7"
        >
          <svg
            viewBox="0 0 255 236.4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.3 0l-99.5 73.9 18.4-43.6z"
              fill="#E2761B"
              stroke="#E2761B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <g
              fill="#E4761B"
              stroke="#E4761B"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path
                d="M12.6 0l98.7 74.6-17.5-44.3zm193.9 171.3L180 211.9l56.7 15.6 16.3-55.3zm-204.4.9l16.2 55.3L75 211.9l-26.5-40.6z"
              />
              <path
                d="M71.8 102.7L56 126.6l56.3 2.5-2-60.5zm111.3 0l-39-34.8-1.3 61.2 56.2-2.5zM75 211.9l33.8-16.5-29.2-22.8zm71.1-16.5l33.9 16.5-4.7-39.3z"
              />
            </g>
            <path
              d="M180 211.9l-33.9-16.5 2.7 22.1-.3 9.3zm-105 0l31.5 14.9-.2-9.3 2.5-22.1z"
              fill="#D7C1B3"
              stroke="#D7C1B3"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M107 158l-28.2-8.3 19.9-9.1zm40.9 0l8.3-17.4 20 9.1z"
              fill="#233447"
              stroke="#233447"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M75 211.9l4.8-40.6-31.3.9zm100.2-40.6l4.8 40.6 26.5-39.7zm23.8-44.7l-56.2 2.5L148 158l8.3-17.4 20 9.1zM78.8 149.7l20-9.1L107 158l5.3-28.9-56.3-2.5z"
              fill="#CD6116"
              stroke="#CD6116"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M56 126.6l23.6 46-.8-22.9zm120.3 23.1l-1 22.9 23.7-46zm-64-20.6L107 158l6.6 34.1 1.5-44.9zm30.5 0l-2.7 18 1.2 45L148 158z"
              fill="#E4751F"
              stroke="#E4751F"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M148 158l-6.7 34.1 4.8 3.3 29.2-22.8 1-22.9zm-69.2-8.3l.8 22.9 29.2 22.8 4.8-3.3L107 158z"
              fill="#F6851B"
              stroke="#F6851B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M148.5 226.8l.3-9.3-2.5-2.2h-37.7l-2.3 2.2.2 9.3L75 211.9l11 9 22.3 15.5h38.3l22.4-15.5 11-9z"
              fill="#C0AD9E"
              stroke="#C0AD9E"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M146.1 195.4l-4.8-3.3h-27.7l-4.8 3.3-2.5 22.1 2.3-2.2h37.7l2.5 2.2z"
              fill="#161616"
              stroke="#161616"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M246.5 78.7l8.5-40.8L242.3 0l-96.2 71.4 37 31.3 52.3 15.3 11.6-13.5-5-3.6 8-7.3-6.2-4.8 8-6.1zM0 37.9l8.5 40.8-5.4 4 8 6.1L5 93.6l8 7.3-5 3.6L19.5 118l52.3-15.3 37-31.3L12.6 0z"
              fill="#763D16"
              stroke="#763D16"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M235.4 118l-52.3-15.3 15.9 23.9-23.7 46 31.2-.4H253zM71.8 102.7L19.5 118 2.1 172.2h46.4l31.1.4-23.6-46zm71 26.4l3.3-57.7 15.2-41.1H93.8l15 41.1 3.5 57.7 1.2 18.2.1 44.8h27.7l.2-44.8z"
              fill="#F6851B"
              stroke="#F6851B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </main>
    <section
      class="c8"
    >
      <p
        class="c9"
      >
        Gas Fee
      </p>
      <div
        class="c10"
      >
        <button
          class="c11"
        >
          0 (Standard)
        </button>
        <button
          class="c11"
        >
          0 (Fast)
        </button>
        <button
          class="c11"
        >
          0 (Instant)
        </button>
      </div>
      <button
        class="c12"
        data-testid="confirm-modal-slippage-button"
      >
        Slippage Limit 
        <svg
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.151 7.342a.507.507 0 01.669-.054l.058.054L10 11.546l4.122-4.204a.507.507 0 01.67-.054l.058.051a.533.533 0 01.05.686l-.051.063-4.485 4.571a.507.507 0 01-.67.051l-.058-.051-4.485-4.571a.532.532 0 010-.746z"
            fill="#8d89a3"
          />
        </svg>
      </button>
    </section>
    <footer>
      <div
        class="c13"
      >
        <button
          class="c14 c15"
          data-testid="confirm-modal-secondary-button"
        >
          Cancel
        </button>
        <button
          class="c14"
          data-testid="confirm-modal-primary-button"
        >
          Confirm (60)
        </button>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Given the ConfirmTransactionModal component when the component is rendered with bidDenom strong and askAmount, bidAmount are BigNumber should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  width: 500px;
  padding: 4px;
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: #201d2a;
  border-radius: 8px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 11;
}

.c0 main {
  padding: 32px;
}

.c0 footer {
  padding: 32px 36px 0;
  background-color: #1a1823;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 32px;
}

.c1 {
  width: 24px;
  height: 24px;
  position: absolute;
  top: 10px;
  right: 10px;
  background: transparent;
  border: none;
}

.c1 svg {
  fill: #656273;
}

.c1:hover svg {
  fill: #9895a6;
}

.c1:active svg {
  fill: #4d4b57;
}

.c14 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c14:hover {
  background-color: #fff;
}

.c14:active {
  background-color: #9895a6;
}

.c15 {
  background-color: #302E3D;
  color: #e1dfeb;
}

.c15:hover {
  background-color: #47445a;
}

.c15:active {
  background-color: #9895a6;
}

.c4 {
  margin-bottom: 10px;
  font-size: 12px;
  color: #656273;
}

.c3 {
  padding: 24px;
  margin: 32px 0 24px;
  background-color: #1a1823;
  border-radius: 8px;
  font-size: 28px;
  font-weight: 500;
  text-align: center;
}

.c3 sup {
  font-size: 14px;
}

.c2 {
  margin: 0 0 24px;
  font-size: 16px;
  font-weight: 500;
  text-align: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border: none;
  background: transparent;
  color: #9895a6;
  font-size: 14px;
}

.c12 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.1s ease;
  transition: 0.1s ease;
}

.c12:hover {
  color: #e1dfeb;
}

.c12:hover svg * {
  fill: #e1dfeb;
}

.c12:active {
  color: #938fa1;
}

.c12:active svg * {
  fill: #938fa1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 + .c5 {
  margin-top: 16px;
}

.c6 span {
  font-weight: 400;
  color: #656273;
}

.c6 strong {
  font-weight: 500;
}

.c8 {
  padding: 32px 32px;
  border-top: 1px solid #302E3D;
}

.c9 {
  margin: 0 0 12px;
  color: #656273;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
  margin: 12px 0 16px;
}

.c7 {
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #1a1823;
}

.c7 svg {
  width: 24px;
  height: 24px;
}

.c11 {
  padding: 12px 16px;
  background-color: transparent;
  border: 1px solid #302E3D;
  border-radius: 22px;
  font-size: 14px;
  font-weight: 500;
  color: #9895a6;
}

.c11:hover {
  background-color: #47445a;
}

.c11:active {
  background-color: #191820;
}

@media screen and (max-width:1440px) {
  .c0 {
    width: 400px;
  }
}

@media screen and (max-width:480px) {
  .c0 {
    width: 100%;
    border-radius: 0;
    top: unset;
    left: 0;
    bottom: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media screen and (max-width:1440px) {
  .c0 main {
    padding: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c0 footer {
    padding: 24px 24px 0;
  }
}

@media screen and (max-width:1440px) {
  .c13 {
    padding-bottom: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c14 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c14 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    padding: 24px;
    margin: 24px 0 20px;
    font-size: 24px;
  }
}

@media screen and (max-width:1440px) {
  .c3 sup {
    font-size: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c2 {
    font-size: 14px;
  }
}

@media screen and (max-width:480px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (max-width:1440px) {
  .c12 {
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c12 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c12 svg {
    width: 16px;
    height: 16px;
  }
}

<div
    class="c0"
  >
    <button
      class="c1"
      data-testid="confirm-modal-close-icon"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          opacity="0.5"
        >
          <g
            transform="translate(-.453 .555)"
          >
            <path
              class="cls-3"
              d="M8.762.384a1.311 1.311 0 011.981 1.707l-.127.147-8.378 8.378A1.311 1.311 0 01.257 8.909l.127-.147z"
              transform="translate(6.453 6.445)"
            />
            <path
              class="cls-3"
              d="M.384.384A1.311 1.311 0 012.09.257l.147.127 8.379 8.38a1.31 1.31 0 01-1.706 1.98l-.147-.127L.384 2.236a1.31 1.31 0 010-1.852z"
              transform="translate(6.453 6.445)"
            />
          </g>
        </g>
      </svg>
    </button>
    <main>
      <h3
        class="c2"
      >
        Confirm Transaction
      </h3>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          You're receiving
        </div>
        ~ 0.000000 
        <sup>
          wNOM
        </sup>
      </div>
      <div
        class="c5 c6"
      >
        <span>
          Current Exchange Rate
        </span>
        <strong>
          1 ETH = NaN NOM
        </strong>
      </div>
      <div
        class="c5 c6"
      >
        <span>
          You're sending
        </span>
        <strong>
          0.000000 ETH
        </strong>
      </div>
      <div
        class="c5 c6"
      >
        <div>
          <span>
            Wallet
          </span>
          <div>
            <strong />
          </div>
        </div>
        <div
          class="c7"
        >
          <svg
            viewBox="0 0 255 236.4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.3 0l-99.5 73.9 18.4-43.6z"
              fill="#E2761B"
              stroke="#E2761B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <g
              fill="#E4761B"
              stroke="#E4761B"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path
                d="M12.6 0l98.7 74.6-17.5-44.3zm193.9 171.3L180 211.9l56.7 15.6 16.3-55.3zm-204.4.9l16.2 55.3L75 211.9l-26.5-40.6z"
              />
              <path
                d="M71.8 102.7L56 126.6l56.3 2.5-2-60.5zm111.3 0l-39-34.8-1.3 61.2 56.2-2.5zM75 211.9l33.8-16.5-29.2-22.8zm71.1-16.5l33.9 16.5-4.7-39.3z"
              />
            </g>
            <path
              d="M180 211.9l-33.9-16.5 2.7 22.1-.3 9.3zm-105 0l31.5 14.9-.2-9.3 2.5-22.1z"
              fill="#D7C1B3"
              stroke="#D7C1B3"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M107 158l-28.2-8.3 19.9-9.1zm40.9 0l8.3-17.4 20 9.1z"
              fill="#233447"
              stroke="#233447"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M75 211.9l4.8-40.6-31.3.9zm100.2-40.6l4.8 40.6 26.5-39.7zm23.8-44.7l-56.2 2.5L148 158l8.3-17.4 20 9.1zM78.8 149.7l20-9.1L107 158l5.3-28.9-56.3-2.5z"
              fill="#CD6116"
              stroke="#CD6116"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M56 126.6l23.6 46-.8-22.9zm120.3 23.1l-1 22.9 23.7-46zm-64-20.6L107 158l6.6 34.1 1.5-44.9zm30.5 0l-2.7 18 1.2 45L148 158z"
              fill="#E4751F"
              stroke="#E4751F"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M148 158l-6.7 34.1 4.8 3.3 29.2-22.8 1-22.9zm-69.2-8.3l.8 22.9 29.2 22.8 4.8-3.3L107 158z"
              fill="#F6851B"
              stroke="#F6851B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M148.5 226.8l.3-9.3-2.5-2.2h-37.7l-2.3 2.2.2 9.3L75 211.9l11 9 22.3 15.5h38.3l22.4-15.5 11-9z"
              fill="#C0AD9E"
              stroke="#C0AD9E"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M146.1 195.4l-4.8-3.3h-27.7l-4.8 3.3-2.5 22.1 2.3-2.2h37.7l2.5 2.2z"
              fill="#161616"
              stroke="#161616"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M246.5 78.7l8.5-40.8L242.3 0l-96.2 71.4 37 31.3 52.3 15.3 11.6-13.5-5-3.6 8-7.3-6.2-4.8 8-6.1zM0 37.9l8.5 40.8-5.4 4 8 6.1L5 93.6l8 7.3-5 3.6L19.5 118l52.3-15.3 37-31.3L12.6 0z"
              fill="#763D16"
              stroke="#763D16"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M235.4 118l-52.3-15.3 15.9 23.9-23.7 46 31.2-.4H253zM71.8 102.7L19.5 118 2.1 172.2h46.4l31.1.4-23.6-46zm71 26.4l3.3-57.7 15.2-41.1H93.8l15 41.1 3.5 57.7 1.2 18.2.1 44.8h27.7l.2-44.8z"
              fill="#F6851B"
              stroke="#F6851B"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </div>
    </main>
    <section
      class="c8"
    >
      <p
        class="c9"
      >
        Gas Fee
      </p>
      <div
        class="c10"
      >
        <button
          class="c11"
        >
          0 (Standard)
        </button>
        <button
          class="c11"
        >
          0 (Fast)
        </button>
        <button
          class="c11"
        >
          0 (Instant)
        </button>
      </div>
      <button
        class="c12"
        data-testid="confirm-modal-slippage-button"
      >
        Slippage Limit 
        <svg
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.151 7.342a.507.507 0 01.669-.054l.058.054L10 11.546l4.122-4.204a.507.507 0 01.67-.054l.058.051a.533.533 0 01.05.686l-.051.063-4.485 4.571a.507.507 0 01-.67.051l-.058-.051-4.485-4.571a.532.532 0 010-.746z"
            fill="#8d89a3"
          />
        </svg>
      </button>
    </section>
    <footer>
      <div
        class="c13"
      >
        <button
          class="c14 c15"
          data-testid="confirm-modal-secondary-button"
        >
          Cancel
        </button>
        <button
          class="c14"
          data-testid="confirm-modal-primary-button"
        >
          Confirm (60)
        </button>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
